# libclang-utils

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  cxcursorkind.json  generate_visit_method.py
.github/workflows/: cmake-build.yml
dependencies/: CMakeLists.txt
include/libclang-utils/: annotatetokens.h  cindex.h  clang-cursor.h  clang-file.h  clang-index.h  clang-source-location.h  clang-source-range.h  clang-token.h  clang-translation-unit.h  clang-type.h  cursorandrangevisitor.h  findincludesinfile.h  findreferencesinfile.h  index-action.h  libclang-utils-defs.h  libclang.h
src/: clang-cursor.cpp  clang-file.cpp  clang-index.cpp  clang-source-range.cpp  clang-token.cpp  clang-translation-unit.cpp  clang-type.cpp  index-action.cpp  libclang.cpp
tests/: CMakeLists.txt  tests.cpp
